# ai-desktop

./: AGENTS.md  README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  lib.rs  main.rs  notification_permission.rs  notifications.rs  shortcuts.rs  state.rs  tray.rs  updater.rs  workflow.rs  wrap.rs
src/hooks/: useAskStream.ts  useSettings.ts
src/lib/: api.ts  errors.ts  tauri.ts  voiceTheme.ts  wrap.ts
src/windows/: Composer.tsx  Settings.tsx
